# pascal-interpreter

./: CMakeLists.txt  README.md  program.pascal
include/: interpreter.h
src/: CMakeLists.txt  call-stack.cpp  helper.cpp  interpreter.cpp  interpreter.h  lexer.cpp  linkedlist.cpp  linkedlist.h  main.cpp  parser.cpp  stack.cpp  stack.h  token.cpp  tree.cpp
test/: CMakeLists.txt  test.cpp  test_interpreter.cpp  test_parser.cpp
